--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -12,16 +12,16 @@
 
 
 
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_add_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:fabSize="mini"
-        android:layout_alignParentRight="true"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_add"/>
+<!--commented until post activity enabled -->
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/btn_add_post"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--app:fabSize="mini"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:src="@drawable/ic_add"/>-->
 
 
 
