--- a/app/src/main/res/layout/adapter_post_item_row.xml
+++ b/app/src/main/res/layout/adapter_post_item_row.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/post_icon"
         android:layout_alignParentLeft="true"
-        android:src="@mipmap/main_logo"
+        android:src="@mipmap/ic_launcher_mcc_2020"
         android:layout_width="65dp"
         android:layout_marginRight="10dp"
         android:layout_height="65dp" />
@@ -29,16 +29,6 @@
             android:textSize="@dimen/medium_text_size"
             android:text="@string/post_title"
             android:textColor="@color/default_dark_text_color"
-            android:layout_height="wrap_content" />
-
-
-        <TextView
-            android:id="@+id/post_date"
-            android:layout_width="match_parent"
-            android:lines="1"
-            android:textSize="@dimen/normal_text_size"
-            android:text="@string/post_date"
-            android:textColor="@color/default_text_color"
             android:layout_height="wrap_content" />
 
 
