--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,6 +6,10 @@
         android:id="@+id/bottom_nav_home"
         android:icon="@drawable/ic_home_icon"/>
 
+    <item android:title="Connect"
+          android:id="@+id/bottom_nav_connect"
+          android:icon="@drawable/ic_wifi"/>
+
     <item android:title="The Word"
         android:id="@+id/bottom_nav_the_word"
         android:icon="@drawable/ic_bible"/>
