--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -25,13 +25,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
                 <ImageView
                     android:id="@+id/backdrop"
                     android:layout_width="match_parent"
-                    android:layout_height="280dp"
-                    android:scaleType="centerCrop"
-                    android:background="#cccccc"/>
-
+                    android:layout_height="350dp"
+                    android:background="#FAFAFA" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
