--- a/app/src/main/res/layout/adapter_post_item_row.xml
+++ b/app/src/main/res/layout/adapter_post_item_row.xml
@@ -31,6 +31,14 @@
             android:textColor="@color/default_dark_text_color"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/post_date"
+            android:layout_width="match_parent"
+            android:lines="1"
+            android:textSize="@dimen/normal_text_size"
+            android:text="@string/post_date"
+            android:textColor="@color/default_text_color"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/post_content"
