--- a/app/src/main/res/layout/rv2_base.xml
+++ b/app/src/main/res/layout/rv2_base.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="@color/color_primary"
+        android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize" />
 
     <RelativeLayout
